--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCSS base</title>
+    <title>Beartour - your traveling agent</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
+    <header class="site-header">
+        <div class="site-header__inner"></div>
+    </header>
     
+    <!-- hero -->
+    <section class="hero">
+
+        <div class="hero__inner"></div>
+
+    </section>
+
+    <!-- section --> 
+
 </body>
 </html>
