--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- hero -->
     <section class="hero">
 
-        <div class="hero__inner"></div>
+        <div class="hero__inner">
+            
+        </div>
 
     </section>
 
