add basic struckte

--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 </head>
 <body>
     <!-- header -->
-    <header class="site-header">
-        <div class="site-header__inner"></div>
-    </header>
+   <div class="site-header">
+   <div class="site-header__inner">
+    <!-- logo -->
+        <a href="index.html" class="site-header__branding">
+
+        </a>
+        <!-- menu -->
+        <nav class="menu">
+            
+        </nav>
+
+
+   </div>
+   </div>
     
     <!-- hero -->
     <section class="hero">
