add bas structe for hero

--- a/index.html
+++ b/index.html
@@ -28,7 +28,26 @@
     <section class="hero">
 
         <div class="hero__inner">
-            
+
+            <div class="hero__main">
+
+                <div class="hero__content">
+
+                </div>
+                <nav class="hero__social">
+                    facebook
+                </nav>
+
+            </div>
+
+            <footer class="hero__footer">
+
+                <a href="" class="hero__prev-link"></a>
+              
+                <nav class="hero__pagination"></nav>
+
+            </footer>
+
         </div>
 
     </section>
