hambyrger, hover effects

--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
                 <li class="menu__item"><a href="" class="menu__link">contact</a></li>
             </ul>
             <button class="menu__button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="33.673" height="24.405" viewBox="0 0 33.673 24.405">
-                    <g id="Menu" transform="translate(-1838.827 -39.095)">
-                      <path id="Path_18" data-name="Path 18" d="M31.673,0H0" transform="translate(1839.827 40.095)" fill="rgba(0,0,0,0)" stroke="#fff" stroke-linecap="round" stroke-width="2"/>
-                      <path id="Path_16" data-name="Path 16" d="M31.673,0H0" transform="translate(1839.827 51.298)" fill="rgba(0,0,0,0)" stroke="#fff" stroke-linecap="round" stroke-width="2"/>
-                      <path id="Path_17" data-name="Path 17" d="M22.5,0H0" transform="translate(1849 62.5)" fill="rgba(0,0,0,0)" stroke="#fff" stroke-linecap="round" stroke-width="2"/>
-                    </g>
-                  </svg>
+                
+                <div class="hamburger">
+                    
+                </div>
+
             </button>
         </nav>
 
